# rust-rcp-client

./: Cargo.toml  README.md
.github/workflows/: changelog.yml  ci.yml  release.yml
examples/: auth_test.rs
scripts/: run_client.sh
src/: lib.rs  main.rs
src/auth/: error.rs  mod.rs  native.rs  password.rs  psk.rs
src/config/: defaults.rs  mod.rs
src/protocol/: error.rs  message.rs  mod.rs  response_handler.rs  transport.rs
src/resources/: mod.rs
src/ui/: app.rs  event_app.rs  events.rs  gui.rs  history.rs  mod.rs  models.rs
src/ui/widgets/: action_panel.rs  auth_panel.rs  connection_panel.rs  mod.rs  server_panel.rs
