[package]
name = "rcp_client_rust"
version = "0.1.0"
edition = "2021"
authors = ["Open RCP Contributors"]
description = "Rust-based client for the Remote Control Protocol (RCP)"

[dependencies]
# Core functionality
tokio = { version = "1.28", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
clap = { version = "4.3", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
dirs = "5.0"
async-trait = "0.1"
uuid = { version = "1.3", features = ["v4", "serde"] }
rand = "0.8"

# UI and graphics
skia-safe = "0.63"
tiny-skia = "0.11"  # Pure Rust alternative for small rendering tasks
winit = "0.28"      # Window handling
raw-window-handle = "0.5"
cosmic-text = "0.9" # Text layout and rendering

# Native OS integration for authentication
keyring = "2.0"     # For secure credential storage
os_info = "3.7"     # For OS detection

# Platform specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
core-foundation = "0.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48", features = ["Win32_System_Com", "Win32_UI_Shell", "Win32_Security"] }

[target.'cfg(unix)'.dependencies]
nix = "0.26"
libc = "0.2"
